# aiogram_declarative

./: README.md  pyproject.toml
aiogram_declarative/: __init__.py
aiogram_declarative/abc/: __init__.py  addon.py
aiogram_declarative/src/: __init__.py  cb_data.py  core_joint.py  dialog_addon.py  registry.py  router.py  telegram_event_observer.py  utils.py
docs/: Addons.md  Concept.md  How it works.md  Joints.md  Registry.md  Router.md  Summary.md
